# Omnidirectional-Robot-contol-using-ROS-

./: README.md
final_control/: CMakeLists.txt  package.xml
final_control/Scripts/: follow_ball.py  go_to_point.py  inverse_kinematics.py  move_omni.py  obstacle_avoidance.py  omni_drive.py
final_control/include/final_control/: controller.h
final_control/src/: avoid.py  camera.py  camera_follow_ball.py  cons.py  goToPoint.py  goToPoint_omni.py  go_to_point.py  ik.py  inv.py  inverse_kinematics.py  move_omni.py  obstacle_avoidance.py  omni_drive.py  test.py
final_description/: CMakeLists.txt  package.xml
final_description/launch/: config_new.rviz  gazebo_viewer.launch  rviz.launch
final_description/xacro/: camera.urdf.xacro  gazebo.urdf.xacro  laser_scan.urdf.xacro  main.urdf.xacro
final_gazebo/: CMakeLists.txt  package.xml
final_gazebo/launch/: empty_world.launch  final.launch  omni_bots.launch  omni_drive.launch  one_bot.launch  robocup.launch  two_bot.launch
final_gazebo/worlds/: RoboCup.world
