<package format="2">
	<name>final_description</name>
	<version>0.0.2</version>
	<description>
		This package constains the model files of the omnibase(omniwheeled robot)
	</description>

	<license>BSD</license>

	<url type="website">https://github.com/Omar-Alaoui-sossi/Omnidirectional-Robot-contol-using-ROS-.git</url>
	<maintainer email="omarsossi345@gmail.com">Omar Alaoui Sossi</maintainer>
	

	<author>Harshal Deshpande</author>
	<author email="omarsossi345@gmail.com">Omar Alaoui Sossi</author>


	<buildtool_depend>catkin</buildtool_depend>
	<!-- <buildtool_depend>catkin_simple</buildtool_depend> -->

	<depend>geometry_msgs</depend>
	<depend>rospy</depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>

</package>
